gcc/testsuite/rust/rustc/ui/error-codes/E0038_dg.rs
trait Trait {
    fn foo(&self) -> Self;
}

fn call_foo(x: Box<dyn Trait>) {
// { dg-error ".E0038." "" { target *-*-* } .-1 }
    let y = x.foo();
// { dg-error ".E0277." "" { target *-*-* } .-1 }
// { dg-error ".E0277." "" { target *-*-* } .-2 }
}

fn main() {
}

